Update card styles and color adjustments

--- a/index.html
+++ b/index.html
@@ -104,12 +104,12 @@
     }
 
     .card{
-      background: linear-gradient(180deg, var(--card), rgba(255,255,255,.05));
-      border: 1px solid var(--line);
+      background: linear-gradient(180deg, var(--card), rgba(255,255,255,.88);
+      border: 1px solid rgba(20,22,30,.14);
       border-radius: var(--r);
-      box-shadow: var(--shadow);
+      box-shadow: 0 18px 50px rgba(20,22,30,.12);
       padding: 22px;
-      backdrop-filter: blur(12px);
+      backdrop-filter: blur(8px);
     }
 
     .hero{
@@ -178,8 +178,9 @@
     }
     .mini p{
       margin:0;
-      color: var(--muted);
+      color: rgba(20,22,30,.72);
       font-size: 13px;
+      font-weight: 500;
       line-height: 1.6;
     }
     .divider{
@@ -261,20 +262,20 @@
     }
     .slot{
       display:flex; gap:12px;
-      padding: 10px 12px;
+      padding: 12px 12px;
       border-radius: 16px;
-      border:1px solid var(--line);
-      background: rgba(255,255,255,.05);
+      border:1px solid rgba(20,22,30,.14);
+      background: rgba(255,255,255,.92);
     }
     .time{
       min-width: 92px;
-      font-weight: 750;
-      color: rgba(255,255,255,.85);
+      font-weight: 800;
+      color: rgba(20,22,30,.86);
       font-size: 12px;
       letter-spacing:.2px;
     }
     .act{
-      color: var(--muted);
+      color: rgba(20,22,30,.72);
       font-size: 13px;
       line-height: 1.55;
     }
