--- a/index.html
+++ b/index.html
@@ -1,27 +1,32 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta name="theme-color" content="#ffffff">
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="default">
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
+  <meta name="theme-color" content="#ffffff" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="default" />
   <title>Date Decider — Tomorrow</title>
+
   <style>
     :root{
       --bg1:#f6f7ff;
       --bg2:#fff6fb;
-      --card: rgba(255,255,255,.72);
-      --card2: rgba(255,255,255,.82);
+
       --text: rgba(20,22,30,.92);
-      --muted:  rgba(20,22,30,.62);
+      --muted: rgba(20,22,30,.68);
+
       --line: rgba(20,22,30,.12);
       --shadow: 0 18px 50px rgba(20,22,30,.12);
+
+      --cardSolid: rgba(255,255,255,.90);
+      --cardSoft: rgba(255,255,255,.76);
+
       --r: 22px;
     }
 
-    *{box-sizing:border-box}
-    html,body{height:100%}
+    *{ box-sizing:border-box; -webkit-tap-highlight-color: transparent; }
+    html,body{ height:100%; }
     body{
       margin:0;
       font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Arial;
@@ -40,92 +45,83 @@
       position:fixed; inset:0;
       background-image:url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="180" height="180"><filter id="n"><feTurbulence type="fractalNoise" baseFrequency=".9" numOctaves="3" stitchTiles="stitch"/></filter><rect width="180" height="180" filter="url(%23n)" opacity=".35"/></svg>');
       mix-blend-mode: overlay;
-      opacity:.035;
+      opacity:.03;
       animation: float 10s ease-in-out infinite alternate;
     }
     @keyframes float{ from{transform:translate3d(0,0,0)} to{transform:translate3d(12px,-8px,0)} }
 
+    /* layout */
     .wrap{
       max-width: 980px;
       margin: 0 auto;
-      padding: 28px 20px 80px;
+      padding: calc(18px + env(safe-area-inset-top)) 16px calc(74px + env(safe-area-inset-bottom));
       position:relative;
     }
 
     header{
       display:flex; align-items:center; justify-content:space-between;
-      gap:14px;
-      padding: 10px 0 18px;
+      gap:12px;
+      padding: 6px 0 14px;
     }
-    .brand{
-      display:flex; align-items:center; gap:12px;
-      user-select:none;
-    }
+    .brand{ display:flex; align-items:center; gap:12px; user-select:none; }
     .logo{
       width:42px; height:42px; border-radius:14px;
-      background: linear-gradient(135deg, rgba(255,255,255,.18), rgba(255,255,255,.06));
+      background: linear-gradient(135deg, rgba(255,255,255,.70), rgba(255,255,255,.28));
       border:1px solid var(--line);
-      box-shadow: 0 10px 30px rgba(0,0,0,.25);
+      box-shadow: 0 10px 30px rgba(20,22,30,.10);
       display:grid; place-items:center;
-      position:relative;
-      overflow:hidden;
+      position:relative; overflow:hidden;
     }
     .logo:before{
       content:"";
       position:absolute; inset:-40%;
-      background: conic-gradient(from 180deg, rgba(255,255,255,.0), rgba(255,255,255,.25), rgba(255,255,255,.0));
+      background: conic-gradient(from 180deg, rgba(20,22,30,0), rgba(20,22,30,.10), rgba(20,22,30,0));
       animation: spin 3.2s linear infinite;
     }
     @keyframes spin{ to{ transform:rotate(360deg) } }
-    .logo span{
-      position:relative;
-      font-weight:700;
-      letter-spacing:.5px;
-      opacity:.95;
-    }
-    .title{
-      display:flex; flex-direction:column; line-height:1.12;
-    }
-    .title strong{font-size:14px; letter-spacing:.2px}
-    .title small{font-size:12px; color:var(--muted)}
+    .logo span{ position:relative; font-weight:800; opacity:.95; }
+
+    .title{ display:flex; flex-direction:column; line-height:1.12; }
+    .title strong{ font-size:14px; letter-spacing:.2px; }
+    .title small{ font-size:12px; color:var(--muted); }
+
     .chip{
       padding:10px 12px;
       border:1px solid var(--line);
       border-radius: 999px;
-      background: rgba(255,255,255,.06);
+      background: rgba(255,255,255,.60);
       color:var(--muted);
       font-size:12px;
       display:flex; align-items:center; gap:8px;
+      white-space:nowrap;
     }
     .dot{
       width:8px; height:8px; border-radius:50%;
       background: rgba(120,255,190,.9);
-      box-shadow: 0 0 20px rgba(120,255,190,.6);
+      box-shadow: 0 0 20px rgba(120,255,190,.35);
     }
 
     .card{
-      background: linear-gradient(180deg, var(--card), rgba(255,255,255,.88);
+      background: var(--cardSolid);
       border: 1px solid rgba(20,22,30,.14);
       border-radius: var(--r);
-      box-shadow: 0 18px 50px rgba(20,22,30,.12);
-      padding: 22px;
+      box-shadow: var(--shadow);
+      padding: 18px;
       backdrop-filter: blur(8px);
     }
 
+    /* hero */
     .hero{
       display:grid;
       grid-template-columns: 1.3fr .9fr;
-      gap:16px;
+      gap:14px;
       align-items:stretch;
-      margin-top: 8px;
-    }
-    @media (max-width: 860px){
-      .hero{grid-template-columns:1fr}
+      margin-top: 6px;
     }
 
     .h1{
-      font-size: 34px;
-      line-height: 1.05;
+      font-size: clamp(24px, 4.2vw, 34px);
+      line-height: 1.08;
       margin: 6px 0 10px;
       letter-spacing:-.5px;
     }
@@ -133,37 +129,43 @@
       color: var(--muted);
       font-size: 14px;
       line-height: 1.6;
-      margin: 0 0 18px;
-      max-width: 56ch;
+      margin: 0 0 14px;
+      max-width: 62ch;
     }
 
-    .btnRow{display:flex; gap:10px; flex-wrap:wrap}
+    .btnRow{
+      display:flex;
+      gap:10px;
+      flex-wrap:wrap;
+      align-items:center;
+    }
+
     button{
       cursor:pointer;
-      border:1px solid var(--line);
-      background: rgba(255,255,255,.08);
+      border:1px solid rgba(20,22,30,.14);
+      background: rgba(255,255,255,.72);
       color: var(--text);
       padding: 12px 14px;
       border-radius: 14px;
-      font-weight: 650;
+      font-weight: 750;
       letter-spacing:.2px;
       transition: transform .15s ease, background .2s ease, border-color .2s ease;
       user-select:none;
     }
-    button:hover{ transform: translateY(-1px); background: rgba(255,255,255,.11) }
+    button:hover{ transform: translateY(-1px); background: rgba(255,255,255,.86) }
     button:active{ transform: translateY(1px) }
+
     .primary{
-      background: linear-gradient(135deg, rgba(120,255,190,.20), rgba(120,180,255,.18));
-      border-color: rgba(255,255,255,.18);
+      background: linear-gradient(135deg, rgba(120,180,255,.26), rgba(255,150,210,.20));
+      border-color: rgba(20,22,30,.16);
     }
 
-    .side{
-      display:flex; flex-direction:column; gap:12px;
-      height:100%;
-    }
+    .divider{ height:1px; background: var(--line); margin: 14px 0; }
+
+    .side{ display:flex; flex-direction:column; gap:12px; height:100%; }
     .mini{
-      background: linear-gradient(180deg, var(--card2), rgba(255,255,255,.05));
-      border:1px solid var(--line);
+      background: var(--cardSoft);
+      border:1px solid rgba(20,22,30,.14);
       border-radius: var(--r);
       padding:16px;
       display:flex; flex-direction:column; gap:10px;
@@ -171,9 +173,9 @@
     }
     .mini h3{
       margin:0;
-      font-size: 13px;
-      letter-spacing:.25px;
-      color: rgba(255,255,255,.86);
+      font-size: 12px;
+      letter-spacing:.28px;
+      color: rgba(20,22,30,.78);
       text-transform: uppercase;
     }
     .mini p{
@@ -183,34 +185,23 @@
       font-weight: 500;
       line-height: 1.6;
     }
-    .divider{
-      height:1px; background: var(--line);
-      margin: 14px 0;
-    }
 
     /* scenes */
     .scene{
-      margin-top: 18px;
+      margin-top: 14px;
       display:none;
       opacity:0;
       transform: translateY(10px);
-      transition: opacity .35s ease, transform .35s ease;
+      transition: opacity .28s ease, transform .28s ease;
     }
-    .scene.active{
-      display:block;
-    }
-    .scene.show{
-      opacity:1;
-      transform: translateY(0);
-    }
+    .scene.active{ display:block; }
+    .scene.show{ opacity:1; transform: translateY(0); }
 
+    /* result grid */
     .grid2{
       display:grid;
       grid-template-columns: 1fr 1fr;
       gap: 14px;
-    }
-    @media (max-width: 860px){
-      .grid2{grid-template-columns:1fr}
     }
 
     .pill{
@@ -219,8 +210,8 @@
       align-items:center;
       padding:8px 10px;
       border-radius:999px;
-      border:1px solid var(--line);
-      background: rgba(255,255,255,.06);
+      border:1px solid rgba(20,22,30,.12);
+      background: rgba(255,255,255,.66);
       color: var(--muted);
       font-size:12px;
     }
@@ -228,27 +219,28 @@
     .resultBox{
       position:relative;
       overflow:hidden;
-      padding: 18px;
+      padding: 16px;
       border-radius: var(--r);
-      border:1px solid rgba(255,255,255,.18);
-      background: linear-gradient(135deg, rgba(255,255,255,.10), rgba(255,255,255,.06));
+      border:1px solid rgba(20,22,30,.14);
+      background: rgba(255,255,255,.88);
       min-height: 160px;
     }
+
     .resultTitle{
       display:flex; justify-content:space-between; gap:12px; align-items:flex-start;
-      margin-bottom: 6px;
+      margin-bottom: 8px;
     }
     .choice{
       font-size: 22px;
-      font-weight: 800;
+      font-weight: 900;
       letter-spacing:-.2px;
       margin: 2px 0 4px;
     }
     .tag{
       font-size: 12px;
-      color: rgba(255,255,255,.80);
-      background: rgba(255,255,255,.10);
-      border: 1px solid rgba(255,255,255,.16);
+      color: rgba(20,22,30,.78);
+      background: rgba(255,255,255,.80);
+      border: 1px solid rgba(20,22,30,.12);
       padding: 7px 10px;
       border-radius: 999px;
       white-space:nowrap;
@@ -269,7 +261,7 @@
     }
     .time{
       min-width: 92px;
-      font-weight: 800;
+      font-weight: 900;
       color: rgba(20,22,30,.86);
       font-size: 12px;
       letter-spacing:.2px;
@@ -281,8 +273,8 @@
     }
 
     footer{
-      margin-top: 26px;
-      color: rgba(255,255,255,.60);
+      margin-top: 18px;
+      color: rgba(20,22,30,.55);
       font-size: 12px;
       text-align:center;
     }
@@ -294,12 +286,97 @@
       pointer-events:none;
       z-index: 20;
     }
+
+    /* Decision overlay (highlight moment) */
+    #decisionOverlay{
+      position:fixed;
+      inset:0;
+      display:none;
+      align-items:center;
+      justify-content:center;
+      padding: 18px;
+      z-index: 60;
+      background: rgba(255,255,255,.62);
+      backdrop-filter: blur(10px);
+    }
+    #decisionOverlay.show{ display:flex; animation: fadeIn .22s ease-out; }
+    @keyframes fadeIn{ from{opacity:0} to{opacity:1} }
+
+    .decisionCard{
+      width:min(680px, 92vw);
+      border-radius: 26px;
+      border: 1px solid rgba(20,22,30,.14);
+      background: rgba(255,255,255,.94);
+      box-shadow: 0 24px 70px rgba(20,22,30,.18);
+      padding: 18px 16px;
+      text-align:center;
+      transform: translateY(8px) scale(.985);
+      animation: pop .28s ease-out forwards;
+    }
+    @keyframes pop{ to{ transform: translateY(0) scale(1) } }
+
+    .decisionSmall{
+      font-size: 12px;
+      letter-spacing: .28px;
+      text-transform: uppercase;
+      color: rgba(20,22,30,.62);
+      margin-bottom: 8px;
+    }
+    .decisionBig{
+      font-size: clamp(26px, 7vw, 38px);
+      font-weight: 950;
+      letter-spacing: -0.6px;
+      color: rgba(20,22,30,.92);
+      margin: 6px 0 6px;
+    }
+    .decisionDesc{
+      font-size: 14px;
+      line-height: 1.6;
+      color: rgba(20,22,30,.72);
+      margin: 0 0 14px;
+    }
+    .decisionBtns{
+      display:flex;
+      gap:10px;
+      justify-content:center;
+      flex-wrap:wrap;
+    }
+
+    /* ===== Mobile optimization ===== */
+    @media (max-width: 860px){
+      .hero{ grid-template-columns:1fr; }
+      .grid2{ grid-template-columns:1fr; }
+      .chip{ display:none; } /* keeps header clean on phone */
+    }
+
+    @media (max-width: 520px){
+      .wrap{ padding-left: 14px; padding-right: 14px; }
+      .card{ padding: 16px; }
+      .btnRow button{ flex: 1 1 100%; } /* buttons become full width */
+      .slot{ flex-direction: column; gap:6px; }
+      .time{ min-width: 0; }
+      .resultTitle{ flex-direction: column; align-items:flex-start; }
+      .tag{ align-self:flex-start; }
+    }
   </style>
 </head>
 
 <body>
   <div class="grain"></div>
   <canvas id="confetti"></canvas>
+
+  <!-- Decision overlay -->
+  <div id="decisionOverlay" aria-hidden="true">
+    <div class="decisionCard">
+      <div class="decisionSmall">Tomorrow’s vibe is…</div>
+      <div class="decisionBig" id="decisionBigText">—</div>
+      <div class="decisionDesc" id="decisionDescText">—</div>
+      <div class="decisionBtns">
+        <button class="primary" id="decisionContinue">Continue</button>
+        <button id="decisionReroll">Reroll</button>
+      </div>
+    </div>
+  </div>
 
   <div class="wrap">
     <header>
@@ -331,7 +408,7 @@
         <div class="divider"></div>
 
         <p class="sub" style="margin:0">
-          <span style="opacity:.9;font-weight:650">MVP options for tomorrow:</span>
+          <span style="opacity:.9;font-weight:750">MVP options for tomorrow:</span>
           <span style="color:var(--muted)">Out date</span> vs <span style="color:var(--muted)">Stay-home date</span>.
           Random, fair, and a bit cinematic.
         </p>
@@ -403,7 +480,7 @@
 
           <div class="resultBox">
             <div style="font-size:12px;color:var(--muted);letter-spacing:.25px;text-transform:uppercase;">Full Saturday plan</div>
-            <div style="margin-top:8px; color: rgba(255,255,255,.84); font-weight:750; letter-spacing:-.15px;">
+            <div style="margin-top:8px; color: rgba(20,22,30,.82); font-weight:900; letter-spacing:-.15px;">
               Sleep-in edition (start slow, end sweet)
             </div>
             <div class="timeline" id="timeline">
@@ -458,7 +535,6 @@
       const opts = { weekday:"long", year:"numeric", month:"short", day:"numeric" };
       return d.toLocaleDateString(undefined, opts);
     }
-
     $("todayText").textContent = "Today is " + formatToday();
 
     // ====== MVP Options ======
@@ -507,7 +583,6 @@
       $("choiceTag").textContent = opt.tag;
       $("choiceDesc").textContent = opt.desc;
 
-      // timeline
       const tl = $("timeline");
       tl.innerHTML = "";
       opt.timeline.forEach(([t, a])=>{
@@ -517,7 +592,6 @@
         tl.appendChild(row);
       });
 
-      // ending pill
       $("endingPill").textContent = `Locked in: ${opt.name}. Tomorrow, we follow the vibe.`;
     }
 
@@ -552,9 +626,16 @@
     window.addEventListener("resize", resize);
     resize();
 
+    const confettiPalette = [
+      "rgba(120,180,255,.85)",   // blue
+      "rgba(255,150,210,.85)",   // pink
+      "rgba(140,255,210,.85)",   // mint
+      "rgba(255,210,120,.85)"    // warm yellow
+    ];
+
     function launchConfetti(){
       confetti = [];
-      const count = 120;
+      const count = 110;
       for(let i=0;i<count;i++){
         confetti.push({
           x: Math.random()*canvas.width,
@@ -564,19 +645,14 @@
           vy: 2.2 + Math.random()*4.2,
           a: Math.random()*Math.PI*2,
           va: -0.2 + Math.random()*0.4,
-          life: 70 + Math.random()*50
+          life: 70 + Math.random()*50,
+          c: confettiPalette[(Math.random()*confettiPalette.length)|0]
         });
       }
       confettiOn = true;
       requestAnimationFrame(tickConfetti);
       setTimeout(()=> confettiOn = false, 1400);
     }
-    const confettiPalette = [
-      "rgba(120,180,255,.85)",   // blue
-      "rgba(255,150,210,.85)",   // pink
-      "rgba(140,255,210,.85)",   // mint
-      "rgba(255,210,120,.85)"    // warm yellow
-];
 
     function tickConfetti(){
       if(!confettiOn && confetti.length===0) return;
@@ -587,28 +663,44 @@
         p.x += p.vx;
         p.y += p.vy;
         p.a += p.va;
-        p.vy += 0.03; // gravity
+        p.vy += 0.03;
 
         ctx.save();
         ctx.translate(p.x, p.y);
         ctx.rotate(p.a);
         ctx.globalAlpha = Math.max(0, Math.min(1, p.life/120));
-        // no explicit colors requested; use a neutral bright blend
-        ctx.fillStyle = "rgba(255,255,255,.85)";
+        ctx.fillStyle = p.c;
         ctx.fillRect(-p.r, -p.r/2, p.r*2.2, p.r);
         ctx.restore();
       }
       if(confettiOn || confetti.length>0) requestAnimationFrame(tickConfetti);
     }
 
+    // ====== Decision overlay ======
+    function openDecisionOverlay(opt){
+      $("decisionBigText").textContent = opt.name;
+      $("decisionDescText").textContent = opt.desc;
+
+      const overlay = $("decisionOverlay");
+      overlay.classList.add("show");
+      overlay.setAttribute("aria-hidden","false");
+
+      if (navigator.vibrate) navigator.vibrate(25);
+    }
+
+    function closeDecisionOverlay(){
+      const overlay = $("decisionOverlay");
+      overlay.classList.remove("show");
+      overlay.setAttribute("aria-hidden","true");
+    }
+
     // ====== Wiring ======
     let current = loadChoice();
 
-    // If previously saved, preload (but still allow ritual)
     if(current){
       setPlan(current);
     }else{
-      setPlan(OPTIONS[0]); // placeholder so UI isn't empty
+      setPlan(OPTIONS[0]);
       $("choiceText").textContent = "Undecided";
       $("choiceDesc").textContent = "Press Decide to let randomness pick the vibe.";
       $("choiceTag").textContent = "MVP";
@@ -617,7 +709,6 @@
 
     $("startBtn").addEventListener("click", ()=> showScene("sceneTransition"));
     $("skipBtn").addEventListener("click", ()=> showScene("sceneResult"));
-
     $("backBtn").addEventListener("click", ()=> showScene("sceneOpening"));
 
     function doDecide(){
@@ -625,15 +716,33 @@
       setPlan(current);
       saveChoice(current);
       launchConfetti();
-      showScene("sceneResult");
+      openDecisionOverlay(current);
     }
 
     $("decideBtn").addEventListener("click", doDecide);
+
+    $("decisionContinue").addEventListener("click", ()=>{
+      closeDecisionOverlay();
+      showScene("sceneResult");
+      setTimeout(()=> {
+        $("sceneResult")?.scrollIntoView({behavior:"smooth", block:"start"});
+      }, 80);
+    });
+
+    $("decisionReroll").addEventListener("click", ()=>{
+      current = randomPick();
+      setPlan(current);
+      saveChoice(current);
+      launchConfetti();
+      openDecisionOverlay(current);
+    });
+
     $("rerollBtn").addEventListener("click", ()=>{
       current = randomPick();
       setPlan(current);
       saveChoice(current);
       launchConfetti();
+      openDecisionOverlay(current);
     });
 
     $("lockBtn").addEventListener("click", ()=>{
@@ -643,7 +752,6 @@
     });
 
     $("againBtn").addEventListener("click", ()=>{
-      // restart flow but keep last choice saved
       showScene("sceneTransition");
     });
 
@@ -658,7 +766,6 @@
     });
 
     $("copyBtn").addEventListener("click", async ()=>{
-      // Copy choice + timeline text
       const choice = $("choiceText").textContent;
       const rows = [...document.querySelectorAll("#timeline .slot")].map(el=>{
         const t = el.querySelector(".time")?.textContent || "";
@@ -674,8 +781,7 @@
       }
     });
 
-    // Nice default: if there was a saved choice, drop user into result quickly
-    // without being pushy — only after a short delay.
+    // preload saved choice silently
     setTimeout(()=>{
       const saved = loadChoice();
       if(saved){
@@ -683,7 +789,6 @@
         setPlan(current);
       }
     }, 200);
-
   </script>
 </body>
 </html>
