--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
       <div class="hdr-title">Saturday Decider</div>
       <div class="hdr-sub" id="dateTxt"></div>
     </div>
-    <div class="hdr-right"><span>Một sản phẩm dành riêng cho vợ tôi 👩‍❤️‍💋‍👩</span></div>
+    <div class="hdr-right"><span>Một sản phẩm dành riêng cho vợ tôi</span></div>
   </header>
 
   <main>
